--- a/IMAppServer/build.gradle
+++ b/IMAppServer/build.gradle
@@ -11,6 +11,21 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    //Gson
+    compile 'com.google.code.gson:gson:2.8.0'
+    //Guava  java封装
+    compile 'com.google.guava:guava:21.0'
+    //轻量级Restful接口框架
+    compile 'org.glassfish.jersey.core:jersey-client:2.26-b03'
+    compile 'org.glassfish.jersey.core:jersey-server:2.26-b03'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.26-b03'
+    //也是一个Json解析库
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03'
+   //数据库操作扩家
+    compile 'org.hibernate:hibernate-core:5.2.9.Final'
+    compile 'org.hibernate:hibernate-entitymanager:5.2.9.Final'
+    compile 'org.hibernate:hibernate-c3p0:5.2.9.Final'
+    //MySql 驱动库
+    compile group:'mysql',name:'mysql-connector-java',version: '6.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
