--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 
-MyIMApp/.idea/inspectionProfiles/Project_Default.xml
-MyIMApp/.idea/misc.xml
-IMAppServer/.idea/workspace.xml
+MyIMApp/.idea/
+
+MyIMApp/build/
