--- a/MyIMApp/build.gradle
+++ b/MyIMApp/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -20,4 +20,18 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext{
+    //版本号相关
+    versionCode = 1;
+    versionName = '1.0.0'
+
+    //相关依赖库版本
+    supportVersion  = '25.3.1'
+
+    butterknifeVersion = "8.7.0"
+
+
+
 }
