--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 IMAppServer/.idea/
 IMAppServer/build/
-IMAppServer/.idea/workspace.xml
-IMAppServer/.idea/workspace.xml
+IMAppServer/.idea/
+IMAppServer/.idea/
+MyIMApp/.idea/
