--- a/MyIMApp/build.gradle
+++ b/MyIMApp/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
-
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.7.0'
     }
 }
 
@@ -31,6 +31,10 @@ ext{
     supportVersion  = '25.3.1'
 
     butterknifeVersion = "8.7.0"
+
+    geniusVersion = '2.0.0'
+    glideVersion = '3.7.0'
+    circleimageviewVersion = '2.1.0'
 
 
 
