--- a/ITalker/app/build.gradle
+++ b/ITalker/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
+    compile project(':lang')
 }
