--- a/ITalker/common/build.gradle
+++ b/ITalker/common/build.gradle
@@ -36,9 +36,7 @@ dependencies {
     compile "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
     compile "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
     compile "net.qiujuer.genius:kit-handler:$rootProject.ext.geniusVersion"
-
-
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVersion"
     testCompile 'junit:junit:4.12'
-
+    compile project(':lang')
 }
