--- a/ITalker/build.gradle
+++ b/ITalker/build.gradle
@@ -39,4 +39,9 @@ ext{
     ucropVersion = "2.2.0-native"
     easyPMVersion = "0.3.0"
     ossVersion = '2.3.0'
+
+    gsonVersion = '2.8.0'
+    retrofitVersion = '2.1.0'
+    getuiVersion = '2.9.3.0'
+    dbflowVersion = "4.0.0-beta7"
 }
