--- a/ITalker/app/src/main/AndroidManifest.xml
+++ b/ITalker/app/src/main/AndroidManifest.xml
@@ -24,8 +24,20 @@
         android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--个推的广播注册-->
+        <receiver
+            android:name=".MessageReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="1000">
+            <intent-filter>
+                <action android:name="com.igexin.sdk.action.${GETUI_APP_ID}" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".LaunchActivity"
+            android:theme="@style/AppTheme.TransStatusBar"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +59,9 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".activities.UserActivity"
-            android:label="@string/title_activity_user"></activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.TransStatusBar"
+            android:label="@string/title_activity_user"/>
     </application>
 
 </manifest>
