--- a/ITalker/build.gradle
+++ b/ITalker/build.gradle
@@ -44,4 +44,6 @@ ext{
     retrofitVersion = '2.1.0'
     getuiVersion = '2.9.3.0'
     dbflowVersion = "4.0.0-beta7"
+    airpanelVersion = "1.1.0"
+    lameVersion = "1.0.0"
 }
