--- a/ITalker/factory/build.gradle
+++ b/ITalker/factory/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${rootProject.ext.dbflowVersion}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${rootProject.ext.dbflowVersion}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${rootProject.ext.dbflowVersion}"
-
+    compile "net.qiujuer.genius:kit-reflect:$rootProject.ext.geniusVersion"
     testCompile 'junit:junit:4.12'
 }
