--- a/ITalker/app/src/main/AndroidManifest.xml
+++ b/ITalker/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
             android:name=".activities.PersonalActivity"
             android:label="@string/title_activity_personal"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.TransStatusBar"/>
+            android:theme="@style/AppTheme.Message"/>
     </application>
 
 </manifest>
